# 20260130

./: .env.example  .gitignore  Agent.md  README.md  pyproject.toml  requirements.txt
configs/: example.yaml
data/: example.csv  news.csv  prices.csv
src/: __init__.py  cli.py  config.py
src/backtest/: __init__.py  run.py
src/cli/: __main__.py
src/features/: __init__.py  cache.py  labels.py  market.py  meta.py  pipeline.py  split.py  text.py  types.py
src/market/: schema.py
src/models/: __init__.py  baseline.py
src/news/: schema.py
src/news_impact/: __init__.py  alerts.py  backtest.py  cli.py  config.py  features.py  model.py  realtime.py  reporting.py
src/news_impact/data_sources/: base.py  news_csv.py  price_csv.py
tests/: test_backtest.py  test_cli.py  test_pipeline.py  test_realtime.py  test_schema.py
